After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 783066 - glformat: fix the usage of GST_GL_RGB565
glformat: fix the usage of GST_GL_RGB565
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.12.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-05-25 03:22 UTC by Haihua Hu
Modified: 2017-05-29 07:59 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
glformat: fix the usage of GST_GL_RGB565 (3.52 KB, patch)
2017-05-25 03:23 UTC, Haihua Hu
committed Details | Review

Description Haihua Hu 2017-05-25 03:22:41 UTC
GL_RGB565 is sized internal glformat, the corresponding glformat should be GL_RGB and type is GL_UNSIGNED_SHORT_565. Otherwise will return GL_INVALID_ENUM when creating texture.
Comment 1 Haihua Hu 2017-05-25 03:23:08 UTC
Created attachment 352548 [details] [review]
glformat: fix the usage of GST_GL_RGB565
Comment 2 Sebastian Dröge (slomo) 2017-05-25 09:35:21 UTC
Attachment 352548 [details] pushed as c2b2c68 - glformat: fix the usage of GST_GL_RGB565