gst-libs/gst/gl/gstglformat.c
@@ -234,7 +234,7 @@ gst_gl_sized_gl_format_from_gl_format_type (GstGLContext * context,
               && !USING_GLES3 (context) ? GST_GL_RGB : GST_GL_RGB8;
           break;
         case GL_UNSIGNED_SHORT_5_6_5:
-          return GST_GL_RGB;
+          return GST_GL_RGB565;
           break;
       }
       break;
